feat: enhance WebSocket response panel with internationalization support and additional message types